2011-12-30  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/51711
	* include/bits/regex.h (regex_replace): Fix thinko.
	* testsuite/28_regex/algorithms/regex_replace/char/51711.cc: New.
	* testsuite/28_regex/algorithms/regex_replace/wchar_t/51711.cc:
	Likewise.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51626
	* include/bits/stl_uninitialized.h (_Construct_default_a_impl): Define
	overloaded functions to conditionally use allocator::construct.
	(_Construct_default_a): Define to dispatch to appropriate
	_Construct_default_a_impl overload.
	(__uninitialized_default_a, __uninitialized_default_n_a): Use
	_Construct_default_a.
	* testsuite/20_util/allocator/51626.cc: New.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* testsuite/ext/type_traits/remove_unsigned_integer_neg.cc: Adjust
	dg-error line numbers.
	* testsuite/ext/type_traits/add_unsigned_floating_neg.cc: Likewise.
	* testsuite/ext/type_traits/remove_unsigned_floating_neg.cc: Likewise.
	* testsuite/ext/type_traits/add_unsigned_integer_neg.cc: Likewise.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/c_global/cmath: Update copyright years.
	* include/ext/type_traits.h: Likewise.

2011-12-19  Jonathan Wakely  <jwakely.gcc@gmail.com>

	Backport from mainline
	2011-11-13  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/c_global/cmath (atan2, pow): Simplify constraining on the
	return type.

	Backport from mainline
	2011-11-12  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51083
	* include/ext/type_traits.h (__promote): Only define __type member
	for integral and floating point types, to prevent math functions
	participating in overload resolution for other types.
	(__promote_2, __promote_3, __promote_4): Use __promote in default
	template argument values, so deduction only succeeds for integral and
	floating point types.
	* testsuite/26_numerics/cmath/51083.cc: New.
	* testsuite/26_numerics/complex/51083.cc: New.